tests/data/good/inheritance_changes_2.py
from __future__ import annotations

from cfg import CN
from tests.data.good.inheritance import cfg

cfg = CN(cfg)
cfg.DICT.BAR = "QUUX"
