tests/data/bad/inheritance_changes_bad.py
from __future__ import annotations

from tests.data.good.inheritance import schema

cfg = schema.init_cfg()
cfg.DICT.BAR = 2
